--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
 # Site settings
 title: Brycon Carpenter Personal Portfolio
 email: bcarpenter1994@hotmail.com
-description: > # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
-
+baseurl: ""
 linked_in_name: bryconc 
 github_username: bryconc
 
 # Build settings
 markdown: kramdown
+
+# Outputting
+
+permalink: /blogs/:year-:month-:day/:title/
