Fixing Email Link
Email icon directed to the wrong email address. Fixed to my professional
email address

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Brycon Carpenter Personal Portfolio
-email: bcarpenter1994@hotmail.com
+email: bryconc@gmail.com
 baseurl: ""
 linked_in_name: bryconc 
 github_username: bryconc
